# TRdenderer

./: CMakeLists.txt  TRenderer.cpp  TRenderer.h  TRenderer.ui  TRendererWidget.cpp  TRendererWidget.h  TRendererWidget.ui  main.cpp  readme.md
Camera/: Camera.cpp  Camera.h
TRendererCore/: BasicDataStructure.hpp  BlinnPhongShader.cpp  BlinnPhongShader.h  FrameBuffer.cpp  FrameBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.hpp  TRendererDevice.cpp  TRendererDevice.h  Texture.cpp  Texture.h
model/clip/: binder clip.mtl
